Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.6
-
None
-
4a6292afc8609c2b51a53ba52ff14adcfc0833fa
Description
1) run examples/quick/controls/theme
2) press 'push'
expected behavior:
- current page transitions out & new page transitions in
actual behavior:
- new page transitions in, but the current page doesn't transition out
3) press back
expected behavior:
- current page transitions out & previous page transitions in
actual behavior:
- current page transitions out, but the previous page is immediately in place without appropriate transition
Attachments
For Gerrit Dashboard: QTBUG-47949 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124335,3 | StackView: fix transitions | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |