StackView: fix transitions

Passing null view bounds for the transitionable exit item helps to kick
off the transition as appropriate. Otherwise the view transition item
determines in QQuickItemViewTransitionableItem::prepareTransition()
that no transition is necessary.

Change-Id: Icb664725c4393ef3bb894b71a5912652f82c9da0
Task-number: QTBUG-47949
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>